0.12.3/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:


Processing a saturation-recovery relaxation series
==================================================

This example processes a pseudo-2D series of 1D spectra acquired with a
variable recovery delay and fits a simple saturation-recovery model to the
dominant resonance.

The bundled Bruker dataset stores the delays in ``vdlist`` and the pulse
program indicates a CP/MAS saturation-recovery experiment. The example keeps a
modest public scope:

- process the 1D FIDs with explicit SpectroChemPy operations;
- extract a signal trace from the dominant processed resonance;
- fit a simple two-parameter recovery model to that trace.

It does not claim replay of vendor processing, nor exact equivalence with the
TopSpin fitting tools bundled alongside the dataset.

Requires the official ``spectrochempy-nmr`` plugin.
Install with: ``pip install spectrochempy[nmr]``.

.. GENERATED FROM PYTHON SOURCE LINES 30-31

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 33-35

Import API
----------

.. GENERATED FROM PYTHON SOURCE LINES 35-40

.. code-block:: default

    import spectrochempy as scp

    # short version of the unit registry
    U = scp.ur








.. GENERATED FROM PYTHON SOURCE LINES 41-44

Import a pseudo-2D delay series
-------------------------------
Define the folder containing the Bruker experiment.

.. GENERATED FROM PYTHON SOURCE LINES 44-49

.. code-block:: default

    datadir = scp.preferences.datadir
    nmrdir = datadir / "nmrdata" / "bruker" / "tests" / "nmr"

    dataset = scp.nmr.read(nmrdir / "relax" / "100" / "ser", use_list="vdlist")








.. GENERATED FROM PYTHON SOURCE LINES 50-53

Analysing the data
---------------------
Print dataset summary

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: default

    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [relax expno:100 procno:1 (SER)] — complex128, shape: (y:9, x:1982), count</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">relax expno:100 procno:1 (SER)</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 03:09:34+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 03:09:34+00:00> Imported from TopSpin dataset</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">intensity</div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">R[[  0.5522    2.137 ...   -1.437 -0.02603]<br/>  [   1.099    3.404 ...  -0.6497  -0.0129]<br/>  ...<br/>  [   1.603     5.99 ...    4.959  0.09235]<br/>  [    1.61     6.14 ...  -0.7725 -0.01501]] countI[[  -1.513   -2.733 ...    4.471  0.08437]<br/>  [  -2.496   -4.623 ...   -6.003  -0.1152]<br/>  ...<br/>  [   -4.25   -7.726 ...    4.695  0.08693]<br/>  [  -4.302    -7.69 ...    0.222 0.004867]] count</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(y:9, x:1982(complex))</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">1982</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">F2 acquisition time</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       0      6.4 ... 1.267e+04 1.268e+04] µs</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">9</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">time</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       1        2 ...       20       50] s</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 56-59

Plot the processed spectra
--------------------------
The `vdlist` delays become the secondary coordinate of the pseudo-2D series.

.. GENERATED FROM PYTHON SOURCE LINES 59-64

.. code-block:: default

    ds = dataset.em(lb=15 * U.Hz)
    ds = ds.fft()
    ds = ds.pk(phc0=-145 * U.deg, phc1=0 * U.deg)
    _ = ds.plot(xlim=(100, -50))




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_001.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr relax
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 65-69

Build a signal trace from the dominant resonance
-----------------------------------------------
The strongest processed peak in this series sits around 20–22 ppm.
We integrate a narrow ppm window around that resonance for each delay.

.. GENERATED FROM PYTHON SOURCE LINES 69-73

.. code-block:: default

    signal = ds[:, 20.0:45.0].simpson()
    _ = signal.plot(marker="^", ls=":")
    signal.real




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_002.png
   :alt: plot spectrochempy nmr  processing  nmr  plot processing nmr relax
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-nmr/images/sphx_glr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax_002.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [relax expno:100 procno:1 (SER)] — float64, size: 9, count⋅ppm</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">relax expno:100 procno:1 (SER)</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 03:09:34+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">description</div><div>:</div><div class="attr-value">Integration of NDDataset 'relax expno:100 procno:1 (SER)' along dim: 'x'.</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 03:09:34+00:00> Dataset resulting from application of `simpson` method</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">area</div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[    1512     2565 ...     4203     4328] count⋅ppm</div></div></div>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">9</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">9</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">time</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       1        2 ...       20       50] s</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 74-77

Fit a model
-----------
create an Optimize object using a simple leastsq method

.. GENERATED FROM PYTHON SOURCE LINES 77-80

.. code-block:: default

    fitter = scp.Optimize(log_level="INFO", method="leastsq")









.. GENERATED FROM PYTHON SOURCE LINES 81-82

Define the model to fit

.. GENERATED FROM PYTHON SOURCE LINES 82-90

.. code-block:: default

    def T1_model(t, I0, T1):  # no underscore in parameters names.
        # Simple saturation-recovery model.
        import numpy as np

        I = I0 * (1 - np.exp(-t / T1))
        return I









.. GENERATED FROM PYTHON SOURCE LINES 91-92

Add the model to the fitter usermodels as it it not a built-in model

.. GENERATED FROM PYTHON SOURCE LINES 92-94

.. code-block:: default

    fitter.usermodels = {"T1_model": T1_model}








.. GENERATED FROM PYTHON SOURCE LINES 95-98

Define the parameter variables using a script
(parameter: value, low_bound,  high_bound)
no underscore in parameters names.

.. GENERATED FROM PYTHON SOURCE LINES 98-105

.. code-block:: default

    fitter.script = """
    MODEL: T1
    shape: T1_model
      $ I0:  1000.0, 1, none
      $ T1:  2.0,    0.1, none
    """








.. GENERATED FROM PYTHON SOURCE LINES 106-107

Perform the fit

.. GENERATED FROM PYTHON SOURCE LINES 107-109

.. code-block:: default

    _ = fitter.fit(signal)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

        



.. GENERATED FROM PYTHON SOURCE LINES 110-113

.. code-block:: default

    som = fitter.predict()
    som



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/home/runner/work/spectrochempy/spectrochempy/build/~gallery_examples/plugins/spectrochempy-nmr/plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py", line 110, in <module>
        som = fitter.predict()
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/analysis/curvefitting/optimize.py", line 1823, in predict
        return self.inverse_transform()
               ~~~~~~~~~~~~~~~~~~~~~~^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/utils/decorators.py", line 654, in __call__
        output = self.method(obj, *args, **kwargs)
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/analysis/_base/_analysisbase.py", line 1243, in inverse_transform
        X_transform = self.transform(**kwargs).data
                      ~~~~~~~~~~~~~~^^^^^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/utils/decorators.py", line 900, in __call__
        X_transf = obj._apply_analysis_output_metadata(
            X_transf,
        ...<5 lines>...
            direct_y_kind=direct_Y_kind,
        )
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/analysis/_base/_analysisbase.py", line 846, in _apply_analysis_output_metadata
        dataset.meta = copy.deepcopy(meta_authority.meta)
        ^^^^^^^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/core/dataset/nddataset.py", line 688, in __setattr__
        super().__setattr__(key, value)
        ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/core/dataset/basearrays/ndarray.py", line 1693, in meta
        self._meta.update(meta)
        ~~~~~~~~~~~~~~~~~^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/utils/meta.py", line 340, in update
        self._data[key].update(value)
        ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/utils/objects.py", line 241, in update
        self[key].update(value)
        ~~~~~~~~~~~~~~~~^^^^^^^
      File "/home/runner/work/spectrochempy/tempdirs/scp_yf458zyp/src/spectrochempy/utils/objects.py", line 237, in update
        raise ValueError("This dictionary is read-only")
    ValueError: This dictionary is read-only




.. GENERATED FROM PYTHON SOURCE LINES 114-116

Plot the measured recovery points and the fitted curve separately so the
experimental series remains a true scatter plot.

.. GENERATED FROM PYTHON SOURCE LINES 116-126

.. code-block:: default

    ax = signal.plot_scatter(
        color="tab:blue",
        marker="o",
        markersize=5,
        label="measured signal",
        title="Saturation-recovery fit of the dominant resonance",
    )
    _ = som.plot(clear=False, color="tab:orange", lw=1.8, label="fitted curve")
    _ = ax.legend()


.. GENERATED FROM PYTHON SOURCE LINES 127-129

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 129-131

.. code-block:: default


    # scp.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.506 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-nmr_plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb <plot_spectrochempy_nmr__processing__nmr__plot_processing_nmr_relax.ipynb>`
